--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bulma": "^0.9.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
